# study-record

./: .gitignore  readme.md
algorithms/: readme.md
algorithms/01-binary-search-demo/: README.md  pyproject.toml
algorithms/01-binary-search-demo/app/: __init__.py  main.py
algorithms/01-binary-search-demo/tests/: test_main.py
algorithms/02-bubble-sort-demo/: README.md  pyproject.toml
algorithms/02-bubble-sort-demo/app/: main.py
algorithms/02-bubble-sort-demo/tests/: test_main.py
algorithms/03-quick-sort-demo/: README.md  pyproject.toml
algorithms/03-quick-sort-demo/app/: main.py
algorithms/03-quick-sort-demo/tests/: test_main.py
algorithms/04-bfs-demo/: README.md  pyproject.toml
algorithms/04-bfs-demo/app/: main.py
algorithms/04-bfs-demo/tests/: test_main.py
algorithms/05-knapsack-demo/: README.md  pyproject.toml
algorithms/05-knapsack-demo/app/: main.py
algorithms/05-knapsack-demo/tests/: test_main.py
algorithms/06-dfs-demo/: README.md  pyproject.toml
algorithms/06-dfs-demo/app/: main.py
algorithms/06-dfs-demo/tests/: test_main.py
algorithms/07-dijkstra-demo/: README.md  pyproject.toml
algorithms/07-dijkstra-demo/app/: main.py
algorithms/07-dijkstra-demo/tests/: test_main.py
algorithms/08-merge-sort-demo/: README.md  pyproject.toml
algorithms/08-merge-sort-demo/app/: main.py
algorithms/08-merge-sort-demo/tests/: test_main.py
algorithms/09-topological-sort-demo/: README.md  pyproject.toml
algorithms/09-topological-sort-demo/app/: main.py
algorithms/09-topological-sort-demo/tests/: test_main.py
algorithms/10-union-find-demo/: README.md  pyproject.toml
algorithms/10-union-find-demo/app/: main.py
algorithms/10-union-find-demo/tests/: test_main.py
algorithms/11-kruskal-demo/: README.md  pyproject.toml
algorithms/11-kruskal-demo/app/: main.py
algorithms/11-kruskal-demo/tests/: test_main.py
algorithms/12-prim-demo/: README.md  pyproject.toml
algorithms/12-prim-demo/app/: main.py
algorithms/12-prim-demo/tests/: test_main.py
algorithms/13-bellman-ford-demo/: README.md  pyproject.toml
algorithms/13-bellman-ford-demo/app/: main.py
algorithms/13-bellman-ford-demo/tests/: test_main.py
algorithms/14-floyd-warshall-demo/: README.md  pyproject.toml
algorithms/14-floyd-warshall-demo/app/: main.py
algorithms/14-floyd-warshall-demo/tests/: test_main.py
algorithms/15-longest-common-subsequence-demo/: README.md  pyproject.toml
algorithms/15-longest-common-subsequence-demo/app/: main.py
algorithms/15-longest-common-subsequence-demo/tests/: test_main.py
database/: readme.md
database/mysql/: readme.md
database/mysql/interview/: 01-core-questions.md  02-scenario-questions.md
database/mysql/notes/: 01-sql-basics.md  02-index.md  03-transaction-mvcc.md
database/mysql/sql/: cases.sql  schema.sql  seed.sql
design-patterns/: readme.md
design-patterns/01-strategy-demo/: README.md  pyproject.toml
design-patterns/01-strategy-demo/app/: __init__.py  main.py
design-patterns/01-strategy-demo/tests/: test_main.py
design-patterns/02-observer-demo/: README.md  pyproject.toml
design-patterns/02-observer-demo/app/: main.py
design-patterns/02-observer-demo/tests/: test_main.py
design-patterns/03-factory-method-demo/: README.md  pyproject.toml
design-patterns/03-factory-method-demo/app/: main.py
design-patterns/03-factory-method-demo/tests/: test_main.py
design-patterns/04-adapter-demo/: README.md  pyproject.toml
design-patterns/04-adapter-demo/app/: main.py
design-patterns/04-adapter-demo/tests/: test_main.py
design-patterns/05-command-demo/: README.md  pyproject.toml
design-patterns/05-command-demo/app/: main.py
design-patterns/05-command-demo/tests/: test_main.py
design-patterns/06-decorator-demo/: README.md  pyproject.toml
design-patterns/06-decorator-demo/app/: __init__.py  main.py
design-patterns/06-decorator-demo/tests/: test_main.py
design-patterns/07-template-method-demo/: README.md  pyproject.toml
design-patterns/07-template-method-demo/app/: __init__.py  main.py
design-patterns/07-template-method-demo/tests/: test_main.py
design-patterns/08-state-demo/: README.md  pyproject.toml
design-patterns/08-state-demo/app/: main.py
design-patterns/08-state-demo/tests/: test_main.py
design-patterns/09-chain-of-responsibility-demo/: README.md  pyproject.toml
design-patterns/09-chain-of-responsibility-demo/app/: main.py
design-patterns/09-chain-of-responsibility-demo/tests/: test_main.py
frontend/: readme.md
frontend/01-react-task-board-demo/: README.md  index.html  package-lock.json  package.json
frontend/01-react-task-board-demo/src/: App.jsx  styles.css
frontend/02-react-search-gallery-demo/: README.md  index.html  package-lock.json  package.json
frontend/02-react-search-gallery-demo/src/: App.jsx  styles.css
python/: readme.md
python/basics/01-asyncio-demo/: README.md  pyproject.toml
python/basics/02-decorator-demo/: README.md  pyproject.toml
python/basics/03-dataclass-demo/: README.md  pyproject.toml
python/basics/04-generator-demo/: README.md  pyproject.toml
python/basics/05-contextmanager-demo/: README.md  pyproject.toml
python/basics/06-pathlib-demo/: README.md  pyproject.toml
python/basics/07-classmethod-staticmethod-demo/: README.md  pyproject.toml
python/basics/07-classmethod-staticmethod-demo/app/: main.py
python/basics/07-classmethod-staticmethod-demo/tests/: test_main.py
python/basics/08-exception-demo/: README.md  pyproject.toml
python/basics/09-iterator-demo/: README.md  pyproject.toml
python/fastapi/03-kafka-demo/: README.md  pyproject.toml
python/fastapi/03-kafka-demo/app/: __init__.py  main.py
python/fastapi/03-kafka-demo/tests/: test_main.py
python/fastapi/06-celery-demo/: README.md  pyproject.toml
python/fastapi/06-celery-demo/app/: celery_app.py  main.py  tasks.py
python/fastapi/06-celery-demo/tests/: test_main.py
python/fastapi/08-file-upload-demo/: README.md  pyproject.toml
python/fastapi/08-file-upload-demo/app/: main.py
python/fastapi/08-file-upload-demo/tests/: test_main.py
(+55 files in other folders)
