[project]
name = "study-record-state-pattern-demo"
version = "0.1.0"
description = "Minimal Python state pattern demo for study-record"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]