[project]
name = "study-record-celery-demo"
version = "0.1.0"
description = "FastAPI + Celery demo for study-record"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
