[project]
name = "study-record-file-upload-demo"
version = "0.1.0"
description = "FastAPI file upload demo for study-record"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]